# oh-my-ralph

./: LICENSE  MANIFEST.in  README.md  agent.md  build.bat  prompt.md  pyproject.toml  ralph.py  run_tests.bat  setup.py  test_cli_model_required.py  test_ralph.py
.github/workflows/: publish-to-pypi.yml
oh_my_ralph/: agent.md  ascii_art.txt  fix_plan.md  prompt.md  ralph.py  ralph_cli.py  ralph_loop.py
