[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ralphy"
version = "0.1.0"
description = "A Python project for ralphy."
authors = [
    { name="vivganes" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/vivganes/ralphy"
"Repository" = "https://github.com/vivganes/ralphy"
