[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-ralph"
version = "0.1.5"
description = "An opinionated orchestrator for Ralph Wiggum loops"
authors = [
    { name="vivganes" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/vivganes/oh-my-ralph"
"Repository" = "https://github.com/vivganes/oh-my-ralph"
[project.scripts]
oh-my-ralph = "oh_my_ralph.ralph:main"

[tool.setuptools.package-data]
oh_my_ralph = ["*.md"]
