[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-ralph"
version = "0.2.0"
description = "An opinionated orchestrator for Ralph Wiggum loops"
authors = [
    { name="vivganes" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/vivganes/oh-my-ralph"
"Repository" = "https://github.com/vivganes/oh-my-ralph"
[project.scripts]
oh-my-ralph = "oh_my_ralph.ralph_cli:main"

[tool.setuptools.package-data]
oh_my_ralph = ["*.md"]

[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
[[tool.bumpversion.files]]
filename = "oh_my_ralph/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'